fix overlapping issue

--- a/assets/css/hover-effects.css
+++ b/assets/css/hover-effects.css
@@ -4,6 +4,7 @@
     max-width: 100%;
     position: relative;
     text-align: center;
+    overflow: hidden;
   }
   
   /* Common style */
